--- a/GemSwapper/bin/AndroidManifest.xml
+++ b/GemSwapper/bin/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
