Forced to create user if it's not already done

--- a/GemSwapper/AndroidManifest.xml
+++ b/GemSwapper/AndroidManifest.xml
@@ -89,6 +89,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.project.gemswapper.MainActivity" />
         </activity>
+        <activity
+            android:name=".GetUser"
+    		android:theme="@android:style/Theme.Dialog"
+            android:label="@string/title_activity_get_user" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.project.gemswapper.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
